# course_hub

./: Dockerfile  database.py  docker-compose.yml  lessons.db  main.py  models.py  pyproject.toml  requirements.txt
templates/: base.html  course.html  edit.html  index.html  lesson.html  upload.html
uploads/: 1bd7b6685dc149ac8c58babbf21f91b4_2 Мой метод и подход к жизни.srt  3f61ef3bd3864d8589a120071ea0c0ab_1 Как перейти на новый уровень жизни_PROMPT_result.md  4f4cca768dd34869b053d801391253da_2 Мой метод и подход к жизни_PROMPT_result.md  75a391daf49e41d092c3612afd2d2771_1 Как перейти на новый уровень жизни_PROMPT_result.md  adab1ac3fd17463ea891bcd1bcb0a856_1 Как перейти на новый уровень жизни_PROMPT.md  f5fb6580617e40bab3b61e03e7dd62e5_1 Как перейти на новый уровень жизни.srt
